Added AddRole handler
