# internal/proto/api-v1-users/server.pb.go
@@ -7,6 +7,7 @@ import (
 	context "context"
 	fmt "fmt"
 	proto "github.com/golang/protobuf/proto"
+	empty "github.com/golang/protobuf/ptypes/empty"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
@@ -24,6 +25,34 @@ var _ = math.Inf
 // A compilation error at this line likely means your copy of the
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
+
+type Role int32
+
+const (
+	Role_UNKNOWN    Role = 0
+	Role_USER       Role = 1
+	Role_USER_ADMIN Role = 2
+)
+
+var Role_name = map[int32]string{
+	0: "UNKNOWN",
+	1: "USER",
+	2: "USER_ADMIN",
+}
+
+var Role_value = map[string]int32{
+	"UNKNOWN":    0,
+	"USER":       1,
+	"USER_ADMIN": 2,
+}
+
+func (x Role) String() string {
+	return proto.EnumName(Role_name, int32(x))
+}
+
+func (Role) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{0}
+}
 
 type ResponseStateCode int32
 
@@ -44,7 +73,54 @@ func (x ResponseStateCode) String() string {
 }
 
 func (ResponseStateCode) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{1}
+}
+
+type AddRoleRequest struct {
+	Uuid                 string   `protobuf:"bytes,1,opt,name=uuid,proto3" json:"uuid,omitempty"`
+	Role                 Role     `protobuf:"varint,2,opt,name=role,proto3,enum=api.v1.users.Role" json:"role,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *AddRoleRequest) Reset()         { *m = AddRoleRequest{} }
+func (m *AddRoleRequest) String() string { return proto.CompactTextString(m) }
+func (*AddRoleRequest) ProtoMessage()    {}
+func (*AddRoleRequest) Descriptor() ([]byte, []int) {
 	return fileDescriptor_fdd6cb6214e7ec5d, []int{0}
+}
+
+func (m *AddRoleRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_AddRoleRequest.Unmarshal(m, b)
+}
+func (m *AddRoleRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_AddRoleRequest.Marshal(b, m, deterministic)
+}
+func (m *AddRoleRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_AddRoleRequest.Merge(m, src)
+}
+func (m *AddRoleRequest) XXX_Size() int {
+	return xxx_messageInfo_AddRoleRequest.Size(m)
+}
+func (m *AddRoleRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_AddRoleRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_AddRoleRequest proto.InternalMessageInfo
+
+func (m *AddRoleRequest) GetUuid() string {
+	if m != nil {
+		return m.Uuid
+	}
+	return ""
+}
+
+func (m *AddRoleRequest) GetRole() Role {
+	if m != nil {
+		return m.Role
+	}
+	return Role_UNKNOWN
 }
 
 type AuthRequest struct {
@@ -59,7 +135,7 @@ func (m *AuthRequest) Reset()         { *m = AuthRequest{} }
 func (m *AuthRequest) String() string { return proto.CompactTextString(m) }
 func (*AuthRequest) ProtoMessage()    {}
 func (*AuthRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_fdd6cb6214e7ec5d, []int{0}
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{1}
 }
 
 func (m *AuthRequest) XXX_Unmarshal(b []byte) error {
@@ -107,7 +183,7 @@ func (m *AuthResponse) Reset()         { *m = AuthResponse{} }
 func (m *AuthResponse) String() string { return proto.CompactTextString(m) }
 func (*AuthResponse) ProtoMessage()    {}
 func (*AuthResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_fdd6cb6214e7ec5d, []int{1}
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{2}
 }
 
 func (m *AuthResponse) XXX_Unmarshal(b []byte) error {
@@ -161,7 +237,7 @@ func (m *Error) Reset()         { *m = Error{} }
 func (m *Error) String() string { return proto.CompactTextString(m) }
 func (*Error) ProtoMessage()    {}
 func (*Error) Descriptor() ([]byte, []int) {
-	return fileDescriptor_fdd6cb6214e7ec5d, []int{2}
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{3}
 }
 
 func (m *Error) XXX_Unmarshal(b []byte) error {
@@ -209,7 +285,7 @@ func (m *CreateUserRequest) Reset()         { *m = CreateUserRequest{} }
 func (m *CreateUserRequest) String() string { return proto.CompactTextString(m) }
 func (*CreateUserRequest) ProtoMessage()    {}
 func (*CreateUserRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_fdd6cb6214e7ec5d, []int{3}
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{4}
 }
 
 func (m *CreateUserRequest) XXX_Unmarshal(b []byte) error {
@@ -262,7 +338,7 @@ func (m *CreateUserResponse) Reset()         { *m = CreateUserResponse{} }
 func (m *CreateUserResponse) String() string { return proto.CompactTextString(m) }
 func (*CreateUserResponse) ProtoMessage()    {}
 func (*CreateUserResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_fdd6cb6214e7ec5d, []int{4}
+	return fileDescriptor_fdd6cb6214e7ec5d, []int{5}
 }
 
 func (m *CreateUserResponse) XXX_Unmarshal(b []byte) error {
@@ -291,7 +367,9 @@ func (m *CreateUserResponse) GetStateCode() ResponseStateCode {
 }
 
 func init() {
+	proto.RegisterEnum("api.v1.users.Role", Role_name, Role_value)
 	proto.RegisterEnum("api.v1.users.ResponseStateCode", ResponseStateCode_name, ResponseStateCode_value)
+	proto.RegisterType((*AddRoleRequest)(nil), "api.v1.users.AddRoleRequest")
 	proto.RegisterType((*AuthRequest)(nil), "api.v1.users.AuthRequest")
 	proto.RegisterType((*AuthResponse)(nil), "api.v1.users.AuthResponse")
 	proto.RegisterType((*Error)(nil), "api.v1.users.Error")
@@ -302,35 +380,43 @@ func init() {
 func init() { proto.RegisterFile("api-v1-users/server.proto", fileDescriptor_fdd6cb6214e7ec5d) }
 
 var fileDescriptor_fdd6cb6214e7ec5d = []byte{
-	// 435 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x52, 0x4d, 0x6f, 0xd3, 0x40,
-	0x10, 0xc5, 0x4d, 0xd3, 0x8f, 0x49, 0x55, 0xe8, 0x96, 0x83, 0xe3, 0x0b, 0x96, 0x4f, 0x55, 0x50,
-	0x6c, 0x25, 0xdc, 0x2a, 0x55, 0x28, 0x0a, 0x39, 0x70, 0x43, 0x0e, 0x48, 0x88, 0x4b, 0x35, 0x75,
-	0x46, 0xce, 0x42, 0xe2, 0x5d, 0x76, 0xd6, 0xae, 0x72, 0xe5, 0x2f, 0xf0, 0xd3, 0x38, 0xf0, 0x07,
-	0xf8, 0x21, 0xc8, 0x5f, 0xd4, 0xa5, 0xf4, 0xc2, 0xc5, 0xda, 0x37, 0x6f, 0xf6, 0xbd, 0x79, 0xeb,
-	0x81, 0x21, 0x6a, 0x39, 0x2e, 0x26, 0xe3, 0x9c, 0xc9, 0x70, 0xc4, 0x64, 0x0a, 0x32, 0xa1, 0x36,
-	0xca, 0x2a, 0x71, 0x82, 0x5a, 0x86, 0xc5, 0x24, 0xac, 0x28, 0xef, 0x53, 0x2a, 0xed, 0x3a, 0xbf,
-	0x09, 0x13, 0xb5, 0x8d, 0x52, 0xa3, 0x93, 0x31, 0x25, 0x8a, 0x77, 0x6c, 0xa9, 0x81, 0x29, 0x5a,
-	0xba, 0xc5, 0x5d, 0x64, 0xd7, 0xd2, 0xac, 0xae, 0x35, 0x1a, 0xbb, 0x8b, 0x52, 0xa5, 0xd2, 0x0d,
-	0xa1, 0x96, 0xdc, 0x1c, 0x23, 0xd4, 0x32, 0xc2, 0x2c, 0x53, 0x16, 0xad, 0x54, 0x19, 0xd7, 0x4e,
-	0xc1, 0x6b, 0x18, 0xcc, 0x72, 0xbb, 0x8e, 0xe9, 0x6b, 0x4e, 0x6c, 0xc5, 0x73, 0xe8, 0xd3, 0x16,
-	0xe5, 0xc6, 0x75, 0x7c, 0xe7, 0xe2, 0x38, 0xae, 0x81, 0xf0, 0xe0, 0x48, 0x23, 0xf3, 0xad, 0x32,
-	0x2b, 0x77, 0xaf, 0x22, 0xfe, 0xe0, 0x20, 0x85, 0x93, 0x5a, 0x80, 0xb5, 0xca, 0x98, 0x4a, 0x05,
-	0xab, 0xbe, 0x50, 0xd6, 0x2a, 0x54, 0xa0, 0xac, 0x16, 0xb8, 0x91, 0xf5, 0xf5, 0xa3, 0xb8, 0x06,
-	0xe2, 0x25, 0x1c, 0x90, 0x31, 0xca, 0xb0, 0xdb, 0xf3, 0x7b, 0x17, 0x83, 0xe9, 0x79, 0xd8, 0xcd,
-	0x1d, 0x2e, 0x4a, 0x2e, 0x6e, 0x5a, 0x82, 0x2b, 0xe8, 0x57, 0x05, 0x21, 0x60, 0x3f, 0x51, 0x2b,
-	0xaa, 0x0c, 0xfa, 0x71, 0x75, 0x16, 0x3e, 0x0c, 0x56, 0xc4, 0x89, 0x91, 0xba, 0x0c, 0xd7, 0x0c,
-	0xd9, 0x2d, 0x05, 0xd7, 0x70, 0x36, 0x37, 0x84, 0x96, 0x3e, 0x30, 0x99, 0xff, 0x8e, 0x2b, 0x5c,
-	0x38, 0x4c, 0xd4, 0x56, 0x63, 0xb6, 0x73, 0x7b, 0x15, 0xd5, 0xc2, 0x60, 0x09, 0xa2, 0x6b, 0xd0,
-	0x3c, 0xc7, 0x15, 0x1c, 0xb3, 0x45, 0x4b, 0xf3, 0x76, 0xe2, 0xd3, 0xe9, 0x8b, 0xfb, 0x29, 0xdb,
-	0xd6, 0x65, 0xdb, 0x16, 0xdf, 0xdd, 0x18, 0xf9, 0x70, 0xf6, 0x80, 0x17, 0x03, 0x38, 0x9c, 0xc7,
-	0x8b, 0xd9, 0xfb, 0xc5, 0x9b, 0x67, 0x4f, 0xa6, 0x3f, 0x1d, 0x78, 0x5a, 0x3a, 0xf2, 0xec, 0xdd,
-	0xdb, 0x25, 0x99, 0x42, 0x26, 0x24, 0x3e, 0x03, 0xdc, 0x8d, 0x22, 0xfe, 0xf2, 0x7b, 0xf0, 0x0a,
-	0x9e, 0xff, 0x78, 0x43, 0x6d, 0x1d, 0x0c, 0xbf, 0xfd, 0xf8, 0xf5, 0x7d, 0xef, 0x3c, 0x38, 0x8d,
-	0x8a, 0x49, 0x54, 0xef, 0x6b, 0xf9, 0xbd, 0x74, 0x46, 0xe2, 0x23, 0xec, 0x97, 0xff, 0x5f, 0x0c,
-	0xef, 0x8b, 0x74, 0x96, 0xca, 0xf3, 0xfe, 0x45, 0x3d, 0xae, 0x8c, 0xb9, 0x5d, 0x5f, 0x3a, 0xa3,
-	0x9b, 0x83, 0x6a, 0x43, 0x5f, 0xfd, 0x0e, 0x00, 0x00, 0xff, 0xff, 0xfc, 0x6f, 0x29, 0x2a, 0x28,
-	0x03, 0x00, 0x00,
+	// 573 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x93, 0xdf, 0x6e, 0xd3, 0x3e,
+	0x14, 0xc7, 0xd7, 0xae, 0xfb, 0x77, 0x3a, 0xf5, 0xd7, 0x79, 0x3f, 0xa1, 0x2e, 0x20, 0xad, 0x8a,
+	0x04, 0x9a, 0x8a, 0x1a, 0x6b, 0xe5, 0x6e, 0xd2, 0x84, 0xaa, 0xad, 0x17, 0x13, 0x50, 0x50, 0xca,
+	0x04, 0xe2, 0x66, 0xf2, 0x92, 0xb3, 0xd6, 0xd0, 0xc6, 0xc6, 0x76, 0x32, 0x55, 0x88, 0x1b, 0x5e,
+	0x81, 0x07, 0xe2, 0x21, 0x78, 0x05, 0x1e, 0x04, 0xd9, 0x49, 0x58, 0xbb, 0xb1, 0x1b, 0x6e, 0xa2,
+	0x73, 0x7c, 0xce, 0xf9, 0xf8, 0x1b, 0xdb, 0x5f, 0xd8, 0x63, 0x92, 0x77, 0xb3, 0xc3, 0x6e, 0xaa,
+	0x51, 0x69, 0xaa, 0x51, 0x65, 0xa8, 0x02, 0xa9, 0x84, 0x11, 0x64, 0x9b, 0x49, 0x1e, 0x64, 0x87,
+	0x81, 0x2b, 0x79, 0x0f, 0xc7, 0x42, 0x8c, 0xa7, 0x48, 0x5d, 0xed, 0x32, 0xbd, 0xa2, 0x38, 0x93,
+	0x66, 0x9e, 0xb7, 0x7a, 0x1f, 0xc6, 0xdc, 0x4c, 0xd2, 0xcb, 0x20, 0x12, 0x33, 0x3a, 0x56, 0x32,
+	0xea, 0x62, 0x24, 0xf4, 0x5c, 0x1b, 0x2c, 0xd2, 0x31, 0x33, 0x78, 0xcd, 0xe6, 0xd4, 0x4c, 0xb8,
+	0x8a, 0x2f, 0x24, 0x53, 0x66, 0x4e, 0x73, 0x1e, 0x93, 0x5c, 0x17, 0x21, 0x65, 0x92, 0x53, 0x96,
+	0x24, 0xc2, 0x30, 0xc3, 0x45, 0xa2, 0x73, 0xb6, 0xff, 0x12, 0x1a, 0xfd, 0x38, 0x0e, 0xc5, 0x14,
+	0x43, 0xfc, 0x9c, 0xa2, 0x36, 0x84, 0x40, 0x2d, 0x4d, 0x79, 0xdc, 0xaa, 0xb4, 0x2b, 0x07, 0x5b,
+	0xa1, 0x8b, 0xc9, 0x13, 0xa8, 0x29, 0x31, 0xc5, 0x56, 0xb5, 0x5d, 0x39, 0x68, 0xf4, 0x48, 0xb0,
+	0xa8, 0x3d, 0x70, 0xc3, 0xae, 0xee, 0x3f, 0x87, 0x7a, 0x3f, 0x35, 0x93, 0x12, 0xf5, 0x3f, 0xac,
+	0xe1, 0x8c, 0xf1, 0x69, 0xc1, 0xca, 0x13, 0xe2, 0xc1, 0xa6, 0x64, 0x5a, 0x5f, 0x0b, 0x15, 0x3b,
+	0xe0, 0x56, 0xf8, 0x27, 0xf7, 0xc7, 0xb0, 0x9d, 0x03, 0xb4, 0x14, 0x89, 0x46, 0x4b, 0x30, 0xe2,
+	0x13, 0x26, 0x25, 0xc1, 0x25, 0x76, 0x35, 0x63, 0x53, 0x9e, 0x8f, 0x6f, 0x86, 0x79, 0x42, 0x9e,
+	0xc2, 0x3a, 0x2a, 0x25, 0x94, 0x6e, 0xad, 0xb6, 0x57, 0x0f, 0xea, 0xbd, 0xdd, 0x65, 0x99, 0x03,
+	0x5b, 0x0b, 0x8b, 0x16, 0xff, 0x18, 0xd6, 0xdc, 0x82, 0xfd, 0xdd, 0x48, 0xc4, 0xe8, 0x36, 0x58,
+	0x0b, 0x5d, 0x4c, 0xda, 0x50, 0x8f, 0x51, 0x47, 0x8a, 0x4b, 0x7b, 0x54, 0x85, 0xc8, 0xc5, 0x25,
+	0xff, 0x02, 0x76, 0x4e, 0x14, 0x32, 0x83, 0xe7, 0x1a, 0xd5, 0x3f, 0xff, 0x2e, 0x69, 0xc1, 0x46,
+	0x24, 0x66, 0x92, 0x25, 0xf3, 0xd6, 0xaa, 0x2b, 0x95, 0xa9, 0x3f, 0x02, 0xb2, 0xb8, 0x41, 0x71,
+	0x1c, 0xc7, 0xb0, 0xa5, 0x0d, 0x33, 0x78, 0x52, 0x2a, 0x6e, 0xf4, 0xf6, 0x6f, 0x5d, 0x46, 0xd1,
+	0x3a, 0x2a, 0xdb, 0xc2, 0x9b, 0x89, 0x4e, 0x17, 0x6a, 0xf6, 0xb2, 0x48, 0x1d, 0x36, 0xce, 0x87,
+	0x2f, 0x86, 0xaf, 0xdf, 0x0d, 0x9b, 0x2b, 0x64, 0x13, 0x6a, 0xe7, 0xa3, 0x41, 0xd8, 0xac, 0x90,
+	0x06, 0x80, 0x8d, 0x2e, 0xfa, 0xa7, 0xaf, 0xce, 0x86, 0xcd, 0x6a, 0xa7, 0x0d, 0x3b, 0x77, 0x70,
+	0x76, 0xf6, 0x24, 0x1c, 0xf4, 0xdf, 0x0e, 0x4e, 0x9b, 0x2b, 0xbd, 0x1f, 0x55, 0xf8, 0xcf, 0x0a,
+	0xd4, 0xfd, 0x37, 0x67, 0x23, 0x54, 0x19, 0x8f, 0x90, 0x7c, 0x04, 0xb8, 0x51, 0x4e, 0x6e, 0xc9,
+	0xbb, 0x73, 0x68, 0x5e, 0xfb, 0xfe, 0x86, 0x7c, 0x6b, 0x7f, 0xef, 0xdb, 0xcf, 0x5f, 0xdf, 0xab,
+	0xbb, 0x7e, 0x83, 0x66, 0x87, 0x34, 0x77, 0x92, 0xfd, 0x1e, 0x55, 0x3a, 0xe4, 0x3d, 0xd4, 0xec,
+	0x73, 0x21, 0x7b, 0xcb, 0x90, 0x85, 0x37, 0xe8, 0x79, 0x7f, 0x2b, 0xdd, 0x4f, 0x66, 0xa9, 0x99,
+	0x58, 0xf2, 0x15, 0x6c, 0x14, 0xbe, 0x20, 0x8f, 0x6e, 0x11, 0x96, 0xec, 0xe2, 0x3d, 0x08, 0x72,
+	0x7f, 0x05, 0xa5, 0x75, 0x83, 0x81, 0xb5, 0xae, 0xff, 0xd8, 0xb1, 0xf7, 0x7d, 0x6f, 0x59, 0x35,
+	0xfd, 0x62, 0x0d, 0xf5, 0x95, 0x5a, 0xbb, 0x1c, 0x55, 0x3a, 0x97, 0xeb, 0x6e, 0xec, 0xd9, 0xef,
+	0x00, 0x00, 0x00, 0xff, 0xff, 0x66, 0xf8, 0xc8, 0x29, 0x2a, 0x04, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -347,6 +433,7 @@ const _ = grpc.SupportPackageIsVersion4
 type UsersAPIServiceClient interface {
 	CreateUser(ctx context.Context, in *CreateUserRequest, opts ...grpc.CallOption) (*CreateUserResponse, error)
 	Auth(ctx context.Context, in *AuthRequest, opts ...grpc.CallOption) (*AuthResponse, error)
+	AddRole(ctx context.Context, in *AddRoleRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 }
 
 type usersAPIServiceClient struct {
@@ -375,10 +462,20 @@ func (c *usersAPIServiceClient) Auth(ctx context.Context, in *AuthRequest, opts 
 	return out, nil
 }
 
+func (c *usersAPIServiceClient) AddRole(ctx context.Context, in *AddRoleRequest, opts ...grpc.CallOption) (*empty.Empty, error) {
+	out := new(empty.Empty)
+	err := c.cc.Invoke(ctx, "/api.v1.users.UsersAPIService/AddRole", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // UsersAPIServiceServer is the server API for UsersAPIService service.
 type UsersAPIServiceServer interface {
 	CreateUser(context.Context, *CreateUserRequest) (*CreateUserResponse, error)
 	Auth(context.Context, *AuthRequest) (*AuthResponse, error)
+	AddRole(context.Context, *AddRoleRequest) (*empty.Empty, error)
 }
 
 // UnimplementedUsersAPIServiceServer can be embedded to have forward compatible implementations.
@@ -390,6 +487,9 @@ func (*UnimplementedUsersAPIServiceServer) CreateUser(ctx context.Context, req *
 }
 func (*UnimplementedUsersAPIServiceServer) Auth(ctx context.Context, req *AuthRequest) (*AuthResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Auth not implemented")
+}
+func (*UnimplementedUsersAPIServiceServer) AddRole(ctx context.Context, req *AddRoleRequest) (*empty.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddRole not implemented")
 }
 
 func RegisterUsersAPIServiceServer(s *grpc.Server, srv UsersAPIServiceServer) {
@@ -432,6 +532,24 @@ func _UsersAPIService_Auth_Handler(srv interface{}, ctx context.Context, dec fun
 	return interceptor(ctx, in, info, handler)
 }
 
+func _UsersAPIService_AddRole_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddRoleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(UsersAPIServiceServer).AddRole(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.v1.users.UsersAPIService/AddRole",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(UsersAPIServiceServer).AddRole(ctx, req.(*AddRoleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _UsersAPIService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "api.v1.users.UsersAPIService",
 	HandlerType: (*UsersAPIServiceServer)(nil),
@@ -443,6 +561,10 @@ var _UsersAPIService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Auth",
 			Handler:    _UsersAPIService_Auth_Handler,
+		},
+		{
+			MethodName: "AddRole",
+			Handler:    _UsersAPIService_AddRole_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
